--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
+    "@angular/animations": "^5.0.2",
     "@angular/common": "^4.4.6",
     "@angular/compiler": "^4.4.6",
     "@angular/compiler-cli": "^4.4.6",
@@ -27,14 +28,14 @@
     "@ionic-native/status-bar": "^4.3.2",
     "@ionic/storage": "^2.0.1",
     "android-versions": "^1.2.1",
-    "cordova-android": "^6.3.0",
+    "cordova-android": "6.3.0",
     "cordova-browser": "^5.0.1",
-    "cordova-plugin-device": "^1.1.6",
+    "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-ionic-webview": "^1.1.16",
-    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-statusbar": "git+https://github.com/apache/cordova-plugin-statusbar.git",
-    "cordova-plugin-whitelist": "^1.3.2",
-    "cordova-sqlite-storage": "^2.0.4",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^2.1.2",
     "ionic-angular": "^3.8.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "^3.0.0",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.0",
+    "ionic": "3.19.0",
     "typescript": "2.3.4"
   },
   "description": "An Ionic project",
