--- a/package.json
+++ b/package.json
@@ -21,21 +21,29 @@
     "@angular/http": "^4.4.6",
     "@angular/platform-browser": "^4.4.6",
     "@angular/platform-browser-dynamic": "^4.4.6",
+    "@ionic-native/camera": "^4.5.3",
     "@ionic-native/core": "^4.3.2",
+    "@ionic-native/file": "^4.5.3",
+    "@ionic-native/file-path": "^4.5.3",
     "@ionic-native/splash-screen": "^4.3.2",
     "@ionic-native/sqlite": "^4.3.2",
     "@ionic-native/sqlite-porter": "^4.3.2",
     "@ionic-native/status-bar": "^4.3.2",
+    "@ionic-native/transfer": "^3.14.0",
     "@ionic/storage": "^2.0.1",
     "android-versions": "^1.2.1",
     "cordova-android": "6.3.0",
     "cordova-browser": "^5.0.1",
+    "cordova-plugin-camera": "^4.0.2",
     "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-filepath": "^1.2.0",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-statusbar": "git+https://github.com/apache/cordova-plugin-statusbar.git",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "^2.1.2",
+    "cordova-sqlite-storage": "^2.2.0",
     "ionic-angular": "^3.8.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "^3.0.0",
@@ -59,7 +67,11 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-filepath": {}
     },
     "platforms": [
       "browser",
